Added Kmeans Notebook.

--- a/ExploratoryDataAnalysis.ipynb
+++ b/ExploratoryDataAnalysis.ipynb
@@ -300,66 +300,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
-   "id": "fdc33e87-8982-40b1-b0bd-a0e5d7b587f0",
+   "execution_count": null,
+   "id": "8b8e4735-3133-49ad-bce9-489ab1af7033",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'NoneType' object has no attribute 'set_index'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-44-027f168d07bb>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     28\u001b[0m \u001b[0mdf2\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdf2\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdrop\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'Fips'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0minplace\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mTrue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     29\u001b[0m \u001b[1;31m# Set the TimeFrame column as the index\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 30\u001b[1;33m \u001b[0mdf2\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mset_index\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'TimeFrame'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0minplace\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mTrue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     31\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     32\u001b[0m \u001b[1;31m# Plot the area graph using seaborn\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'set_index'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Connect to the SQLite database\n",
-    "conn = sqlite3.connect('data/opiods.db')\n",
-    "# join deaths and sales table, query for just MN and Oxycododone\n",
-    "query2 = \"SELECT deaths.Fips, deaths.Location, deaths.[TimeFrame], deaths.[Drug Type], \" \\\n",
-    "        \"deaths.Data as deaths_data, sales.Data as HydrocodoneSales \" \\\n",
-    "        \"FROM deaths \" \\\n",
-    "        \"INNER JOIN sales ON sales.Fips = deaths.Fips and sales.TimeFrame = deaths.TimeFrame \" \\\n",
-    "        \"WHERE [Drug Type] = 'All opioids' and deaths.Location = 'Minnesota'\" \\\n",
-    "        \"AND [Oxycodone / Hydrocodone] = 'Hydrocodone' \" \\\n",
-    "        \"ORDER BY deaths.Location, deaths.TimeFrame\"\n",
-    "\n",
-    "\n",
-    "# load into df\n",
-    "df2 = pd.read_sql_query(query2, conn)\n",
-    "df2\n",
-    "\n",
-    "# Close the connection\n",
-    "conn.close()\n",
-    "df2\n",
-    "\n",
-    "import seaborn as sns\n",
-    "import matplotlib.pyplot as plt\n",
-    "# Set the style to whitegrid\n",
-    "sns.set_style(\"darkgrid\")\n",
-    "\n",
-    "# Convert the TimeFrame column to datetime format\n",
-    "df2['TimeFrame'] = pd.to_datetime(df2['TimeFrame'], format='%Y')\n",
-    "df2 = df2.drop('Fips', axis=1, inplace=True)\n",
-    "# Set the TimeFrame column as the index\n",
-    "df2.set_index('TimeFrame', inplace=True)\n",
-    "\n",
-    "# Plot the area graph using seaborn\n",
-    "sns.lineplot(data=df2, linewidth=2, palette=\"Set1\")\n",
-    "\n",
-    "# Set the labels and title\n",
-    "plt.xlabel('Year')\n",
-    "plt.ylabel('Deaths Data and Oxy Sales Data')\n",
-    "plt.title('Deaths Data and Oxy Sales Data by Year in Minnesota')\n",
-    "plt.legend(['Deaths Data', 'Oxy Sales Data'])\n",
-    "\n",
-    "# Show the plot\n",
-    "plt.show()\n",
-    "\n",
     "\n"
    ]
   },
@@ -400,10 +345,6 @@
     "# Close the connection\n",
     "conn.close()\n",
     "\n",
-    "\n",
-    "#df2\n",
-    "#df2[\"TimeFrame\"] = pd.datetime(df2[\"TimeFrame\"],format='%Y')\n",
-    "#df2\n",
     "\n",
     "df2['TimeFrame'] = pd.to_datetime(df2['TimeFrame'], format='%Y')\n",
     "df2\n",
@@ -521,34 +462,53 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "73e8cf70-d72e-4245-a181-2a46c11faf17",
+   "id": "be29a283-c83a-45b5-87e3-b6bd72739d5d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "sns.scatterplot(x=\"Data\", y=\"Data\", hue=\"Location\", data=sales, label=\"Sales\")\n",
-    "sns.scatterplot(x=\"Data\", y=\"Data\", hue=\"Location\", data=deaths, label=\"Deaths\")\n",
-    "plt.title(\"Sales and Deaths by Location\")\n",
-    "plt.xlabel(\"Data\")\n",
-    "plt.ylabel(\"Data\")\n",
-    "plt.legend()\n",
-    "plt.show()"
+    "# Connect to the SQLite database\n",
+    "conn = sqlite3.connect('data/opiods.db')\n",
+    "# join deaths and sales table, query for just MN and Oxycododone\n",
+    "query2 = \"SELECT deaths.Fips, deaths.Location, deaths.[TimeFrame], deaths.[Drug Type], \" \\\n",
+    "        \"deaths.Data as deaths_data, sales.Data as HydrocodoneSales \" \\\n",
+    "        \"FROM deaths \" \\\n",
+    "        \"INNER JOIN sales ON sales.Fips = deaths.Fips and sales.TimeFrame = deaths.TimeFrame \" \\\n",
+    "        \"WHERE [Drug Type] = 'All opioids' and deaths.Location = 'Minnesota'\" \\\n",
+    "        \"AND [Oxycodone / Hydrocodone] = 'Hydrocodone' \" \\\n",
+    "        \"ORDER BY deaths.Location, deaths.TimeFrame\"\n",
+    "\n",
+    "\n",
+    "# load into df\n",
+    "df2 = pd.read_sql_query(query2, conn)\n",
+    "df2\n",
+    "\n",
+    "# Close the connection\n",
+    "conn.close()\n",
+    "df2\n",
+    "\n",
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt\n",
+    "# Set the style to whitegrid\n",
+    "sns.set_style(\"darkgrid\")\n",
+    "\n",
+    "# Convert the TimeFrame column to datetime format\n",
+    "df2['TimeFrame'] = pd.to_datetime(df2['TimeFrame'], format='%Y')\n",
+    "df2 = df2.drop('Fips', axis=1, inplace=True)\n",
+    "# Set the TimeFrame column as the index\n",
+    "df2.set_index('TimeFrame', inplace=Tue)\n",
+    "\n",
+    "# Plot the area graph using seaborn\n",
+    "sns.lineplot(data=df2, linewidth=2, palette=\"Set1\")\n",
+    "\n",
+    "# Set the labels and title\n",
+    "plt.xlabel('Year')\n",
+    "plt.ylabel('Deaths Data and Oxy Sales Data')\n",
+    "plt.title('Deaths Data and Oxy Sales Data by Year in Minnesota')\n",
+    "plt.legend(['Deaths Data', 'Oxy Sales Data'])\n",
+    "\n",
+    "# Show the plot\n",
+    "plt.show()\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "460c5939-92fd-4f43-a154-35f5c7b9d810",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d0f98e3b-548d-409d-ab08-9e66139a4e96",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
