Added conclusions, cleaned NB.

--- a/Predictions.ipynb
+++ b/Predictions.ipynb
@@ -11,17 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "2ec554ac-f6b4-4b32-92f8-baf6a0a7d62b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "test commit"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "id": "5a1b82db-7919-4284-9fbd-1f808c4de6e1",
    "metadata": {},
    "outputs": [],
@@ -31,191 +21,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "id": "cc4aa024-023c-4734-a924-a9ab5a7684ea",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>id</th>\n",
-       "      <th>TimeFrame</th>\n",
-       "      <th>Location</th>\n",
-       "      <th>OxycodoneSalesData_x</th>\n",
-       "      <th>Actual</th>\n",
-       "      <th>Predicted</th>\n",
-       "      <th>diff</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>2007</td>\n",
-       "      <td>Oklahoma</td>\n",
-       "      <td>19.26904</td>\n",
-       "      <td>13.89650</td>\n",
-       "      <td>8.564004</td>\n",
-       "      <td>5.332496</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2</td>\n",
-       "      <td>2015</td>\n",
-       "      <td>Nebraska</td>\n",
-       "      <td>9.66823</td>\n",
-       "      <td>3.09116</td>\n",
-       "      <td>10.899732</td>\n",
-       "      <td>-7.808572</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>3</td>\n",
-       "      <td>2018</td>\n",
-       "      <td>Virginia</td>\n",
-       "      <td>12.56330</td>\n",
-       "      <td>14.25817</td>\n",
-       "      <td>14.475524</td>\n",
-       "      <td>-0.217354</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>4</td>\n",
-       "      <td>2007</td>\n",
-       "      <td>Kansas</td>\n",
-       "      <td>13.93383</td>\n",
-       "      <td>4.35444</td>\n",
-       "      <td>6.290170</td>\n",
-       "      <td>-1.935730</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>5</td>\n",
-       "      <td>2015</td>\n",
-       "      <td>Iowa</td>\n",
-       "      <td>8.59927</td>\n",
-       "      <td>5.78924</td>\n",
-       "      <td>9.882943</td>\n",
-       "      <td>-4.093703</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>182</th>\n",
-       "      <td>183</td>\n",
-       "      <td>2009</td>\n",
-       "      <td>North Carolina</td>\n",
-       "      <td>23.07240</td>\n",
-       "      <td>9.12544</td>\n",
-       "      <td>10.106366</td>\n",
-       "      <td>-0.980926</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>183</th>\n",
-       "      <td>184</td>\n",
-       "      <td>2016</td>\n",
-       "      <td>Connecticut</td>\n",
-       "      <td>22.08360</td>\n",
-       "      <td>24.47231</td>\n",
-       "      <td>11.945112</td>\n",
-       "      <td>12.527198</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>184</th>\n",
-       "      <td>185</td>\n",
-       "      <td>2003</td>\n",
-       "      <td>Arizona</td>\n",
-       "      <td>15.39839</td>\n",
-       "      <td>6.44398</td>\n",
-       "      <td>3.139232</td>\n",
-       "      <td>3.304748</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>185</th>\n",
-       "      <td>186</td>\n",
-       "      <td>2011</td>\n",
-       "      <td>Utah</td>\n",
-       "      <td>23.38377</td>\n",
-       "      <td>14.57733</td>\n",
-       "      <td>12.132789</td>\n",
-       "      <td>2.444541</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>186</th>\n",
-       "      <td>187</td>\n",
-       "      <td>2005</td>\n",
-       "      <td>Missouri</td>\n",
-       "      <td>22.33051</td>\n",
-       "      <td>5.30296</td>\n",
-       "      <td>7.157518</td>\n",
-       "      <td>-1.854558</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>187 rows × 7 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      id  TimeFrame        Location  OxycodoneSalesData_x    Actual  \\\n",
-       "0      1       2007        Oklahoma              19.26904  13.89650   \n",
-       "1      2       2015        Nebraska               9.66823   3.09116   \n",
-       "2      3       2018        Virginia              12.56330  14.25817   \n",
-       "3      4       2007          Kansas              13.93383   4.35444   \n",
-       "4      5       2015            Iowa               8.59927   5.78924   \n",
-       "..   ...        ...             ...                   ...       ...   \n",
-       "182  183       2009  North Carolina              23.07240   9.12544   \n",
-       "183  184       2016     Connecticut              22.08360  24.47231   \n",
-       "184  185       2003         Arizona              15.39839   6.44398   \n",
-       "185  186       2011            Utah              23.38377  14.57733   \n",
-       "186  187       2005        Missouri              22.33051   5.30296   \n",
-       "\n",
-       "     Predicted       diff  \n",
-       "0     8.564004   5.332496  \n",
-       "1    10.899732  -7.808572  \n",
-       "2    14.475524  -0.217354  \n",
-       "3     6.290170  -1.935730  \n",
-       "4     9.882943  -4.093703  \n",
-       "..         ...        ...  \n",
-       "182  10.106366  -0.980926  \n",
-       "183  11.945112  12.527198  \n",
-       "184   3.139232   3.304748  \n",
-       "185  12.132789   2.444541  \n",
-       "186   7.157518  -1.854558  \n",
-       "\n",
-       "[187 rows x 7 columns]"
-      ]
-     },
-     "execution_count": 37,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Import the necessary libraries\n",
     "import pandas as pd\n",
@@ -266,8 +75,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "id": "47c96429-5189-4f3e-ab4c-22713afaf76e",
+   "execution_count": 5,
+   "id": "1df3afc7-ba67-4b60-a69a-c4cd9ca795d5",
    "metadata": {},
    "outputs": [
     {
@@ -319,12 +128,20 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a6353f05-3e3a-49b8-9e41-3e29356c1ef2",
+   "cell_type": "markdown",
+   "id": "86e7be5f-09d8-42b6-893c-6ccb6b8f7f54",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Conclusion"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2dfd9d90-b7ea-4a54-b00f-36e0218f9612",
+   "metadata": {},
+   "source": [
+    "Although there is a positive correlation between opiod sales and opiod overdoses, the number of opiod prescribtion per state is not an accuret predictor of opiod deaths. "
+   ]
   },
   {
    "cell_type": "code",
@@ -543,6 +360,14 @@
     "df[\"predicted_count\"] = df[\"Predicted\"] * 300\n",
     "df.query(\"diff < 1.25  & diff < -1.25\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c4b32155-6477-433e-8615-249611117b75",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
